--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
+    "electron-native-notification": "^1.2.1",
+    "electron-notifications": "^1.0.0",
     "jquery": "^3.3.1",
+    "node-notifier": "^5.2.1",
     "ytdl-core": "^0.20.4"
   }
 }
